--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
         <div class="main-content">
             <div class="sidebar-backdrop" id="sidebarBackdrop"></div>
             <aside class="sidebar" id="sidebar">
+                <div class="sidebar-header">
+                    <h2 class="sidebar-title">Interactive Resume Builder</h2>
+                    <button id="sidebarClose" class="btn sidebar-close">
+                        <i data-lucide="x" style="width: 20px; height: 20px;"></i>
+                    </button>
+                </div>
                 <div class="section">
                     <h3>Resume Sections</h3>
                     <div class="section-buttons">
