fix:button sizing

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <aside class="sidebar" id="sidebar">
                 <div class="sidebar-header">
                     <h2 class="sidebar-title">Interactive Resume Builder</h2>
-                    <button id="sidebarClose" class="btn sidebar-close">
+                    <button id="sidebarClose" class="sidebar-close">
                         <i data-lucide="x" style="width: 20px; height: 20px;"></i>
                     </button>
                 </div>
