fix:resuem view

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="app">
         <header class="header">
             <div class="header-left">
-                <button id="sidebarToggle" class="btn sidebar-toggle" style="display: none;">
+                <button id="sidebarToggle" class=" sidebar-toggle" style="display: none;">
                     <i data-lucide="menu" style="width: 20px; height: 20px;"></i>
                 </button>
                 <h1>Interactive Resume Builder</h1>
